@@ -19,6 +19,7 @@
 - Fixed not staying centered when zooming with ctrl+mouse wheel<br/>
 - Fixed "rearrange notes" feature in tablature editor, which had accidentally been disabled<br/>
 - Fixed issues in score editor with stem for some notes being sometimes up, sometimes down<br/>
+- Speedups in printing code<br/>
 - Don't exit when save dialog is cancelled<br/>
 - Code cleanup and unit tests<br/><br/>
 
